Fix .htaccess to allow access to server_check.php diagnostic script

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -15,6 +15,8 @@ RewriteRule ^settings/?(.*)$ settings.php/$1 [QSA,L]
 RewriteRule ^streams/?(.*)$ streams.php/$1 [QSA,L]
 RewriteRule ^chat/?(.*)$ chat.php/$1 [QSA,L]
 
-# Deny direct access to PHP files except through rewrite rules
+# Allow access to diagnostic script
+RewriteCond %{REQUEST_URI} !server_check\.php$ [NC]
+# Deny direct access to other PHP files except through rewrite rules
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+api/[^\s]*\.php[\s?] [NC]
 RewriteRule ^ - [F,L]
