--- a/api/.htaccess
+++ b/api/.htaccess
@@ -19,6 +19,7 @@ RewriteRule ^chat/?(.*)$ chat.php/$1 [QSA,L]
 RewriteCond %{REQUEST_URI} !server_check\.php$ [NC]
 RewriteCond %{REQUEST_URI} !test_register\.php$ [NC]
 RewriteCond %{REQUEST_URI} !minimal_test\.php$ [NC]
+RewriteCond %{REQUEST_URI} !debug_routing\.php$ [NC]
 # Deny direct access to other PHP files except through rewrite rules
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+api/[^\s]*\.php[\s?] [NC]
 RewriteRule ^ - [F,L]
