Add admin utilities and test files for user management and API testing

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -10,9 +10,13 @@ RewriteCond %{REQUEST_METHOD} OPTIONS
 RewriteRule ^(.*)$ $1 [R=200,L]
 
 # API Routes
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^users/?(.*)$ users.php/$1 [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^settings/?(.*)$ settings.php/$1 [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^streams/?(.*)$ streams.php/$1 [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^chat/?(.*)$ chat.php/$1 [QSA,L]
 
 # Allow access to diagnostic and test scripts
