Add thumbnails to .gitignore
- Prevent uploaded thumbnail files from being tracked in Git
- Remove existing thumbnail files from Git index
- Keep .htaccess file for proper web server configuration

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,14 @@ Thumbs.db
 logs
 *.log
 
+# Uploaded thumbnails
+thumbnails/*.png
+thumbnails/*.jpg
+thumbnails/*.jpeg
+thumbnails/*.gif
+thumbnails/*.webp
+thumbnails/thumb_*
+
 # Temporary files
 tmp/
 temp/
